<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/add_account_lol_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AddAccount">
    <LinearLayout
        android:id="@+id/add_account_lol_basic_information"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="19dp"
        android:paddingBottom="56dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/lol_basic_information"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/add_account_lol_icon_field"
                android:background="@drawable/add_account_field_default"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:padding="16dp"
                android:contentDescription="@string/icon_label"
                android:src="@drawable/empty_icon" />
            <TextView
                android:id="@+id/add_account_lol_icon_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/add_account_lol_icon_field"
                android:layout_alignBottom="@+id/add_account_lol_icon_field"
                android:text="@string/icon_label"
                android:textAllCaps="true"
                android:fontFamily="sans-serif"
                android:textColor="@color/grayDarkTextColor"
                android:textSize="12sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/add_account_lol_username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="0dp"
                android:layout_below="@+id/add_account_lol_icon_field"
                android:fontFamily="sans-serif"
                android:text="@string/username_label"
                android:textAllCaps="true"
                android:textColor="@color/grayDarkTextColor"
                android:textSize="12sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/add_account_lol_username_field"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_marginStart="0dp"
                android:layout_below="@+id/add_account_lol_username_label"
                android:autofillHints=""
                android:background="@drawable/add_account_field_default"
                android:fitsSystemWindows="false"
                android:fontFamily="sans-serif"
                android:hint="@string/username_field_hint"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/grayDarkTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/add_account_lol_level_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="0dp"
                android:layout_below="@+id/add_account_lol_username_field"
                android:fontFamily="sans-serif"
                android:text="@string/level_label"
                android:textAllCaps="true"
                android:textColor="@color/grayDarkTextColor"
                android:textSize="12sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/add_account_lol_level_field"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_below="@id/add_account_lol_level_label"
                android:autofillHints=""
                android:background="@drawable/add_account_field_default"
                android:digits="0123456789"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/level_field_hint"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/grayDarkTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/add_account_lol_server_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="3dp"
                android:layout_below="@id/add_account_lol_level_field"
                android:fontFamily="sans-serif"
                android:text="@string/server_label"
                android:textAllCaps="true"
                android:textColor="@color/grayDarkTextColor"
                android:textSize="12sp"
                android:textStyle="bold" />
            <RelativeLayout
                android:id="@+id/add_account_lol_server_background"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignStart="@id/add_account_lol_server_label"
                android:layout_below="@id/add_account_lol_server_label"
                android:background="@drawable/add_account_field_default">
                <Spinner
                    android:id="@+id/add_account_lol_server_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:backgroundTint="@color/grayDarkTextColor"
                    android:entries="@array/server_list"
                    android:textAlignment="center" />
            </RelativeLayout>
            <TextView
                android:id="@+id/add_account_lol_match_history_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="0dp"
                android:layout_below="@id/add_account_lol_server_background"
                android:visibility="gone"
                android:fontFamily="sans-serif"
                android:text="@string/match_history_label"
                android:textAllCaps="true"
                android:textColor="@color/grayDarkTextColor"
                android:textSize="12sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/add_account_lol_match_history_field"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_marginStart="0dp"
                android:layout_below="@id/add_account_lol_match_history_label"
                android:autofillHints=""
                android:background="@drawable/add_account_field_default"
                android:fitsSystemWindows="false"
                android:visibility="gone"
                android:fontFamily="sans-serif"
                android:hint="@string/match_history_hint"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/grayDarkTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/add_account_lol_club_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="3dp"
                android:layout_above="@id/add_account_lol_club_field"
                android:layout_alignLeft="@id/add_account_lol_club_field"
                android:fontFamily="sans-serif"
                android:text="@string/club_label"
                android:textAllCaps="true"
                android:textColor="@color/grayDarkTextColor"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
            <EditText
                android:id="@+id/add_account_lol_club_field"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="24dp"
                android:layout_toEndOf="@id/add_account_lol_level_field"
                android:layout_alignTop="@id/add_account_lol_level_field"
                android:autofillHints=""
                android:background="@drawable/add_account_field_default"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/club_hint"
                android:inputType="text"
                android:maxLength="5"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/grayDarkTextColor"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
        </RelativeLayout>
    </LinearLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp">
        <include layout="@layout/lol_add_account_solo_duo" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="112dp">
        <include layout="@layout/lol_add_account_flex" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="168dp">
        <include layout="@layout/lol_add_account_teamfight_tactics" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
