<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/add_account_lol_username_field"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="@drawable/add_account_field_default"
        android:fitsSystemWindows="false"
        android:fontFamily="sans-serif"
        android:hint="@string/username_field_hint"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/grayDarkTextColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/add_account_lol_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:fontFamily="sans-serif"
        android:text="@string/username_label"
        android:textAllCaps="true"
        android:textColor="@color/grayDarkTextColor"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/add_account_lol_username_field"
        app:layout_constraintStart_toStartOf="@+id/add_account_lol_username_field" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/add_account_button"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_account_lol_username_field"
        app:layout_constraintVertical_bias="0.505" />
</androidx.constraintlayout.widget.ConstraintLayout>